增加了多种颜色的识别

--- a/src/App.css
+++ b/src/App.css
@@ -16,7 +16,7 @@
 }
 
 .App-header {
-  background-color: #79879c;
+  background-color:#32353a;
   min-height: 100vh;
   display: flex;
   flex-direction: column;
